translate into russian

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,10 @@
 </head>
 
 <body>
-  <h1>Solving the Quadratic Equation</h1>
+  <h1>Решение квадратного уравнения</h1>
   <div>
     <p>
-      In algebra, a quadratic equation is any equation having the form <h3>\(ax^2 + bx + c = 0\)</h3> and they are
-      where \(x\) represents an unknown, and \(a\), \(b\), and \(c\) represent known numbers.
+      Квадратное уравнение — алгебраическое уравнение общего вида  <h3>\(ax^2 + bx + c = 0\)</h3> где \(x\) неизвестные корни, и \(a\), \(b\), и \(c\) представляют параметры уравнения.
     </p>
   </div>
   <br>
@@ -31,8 +30,8 @@
         </div>
       </div>
       <br>
-      <input type="submit" value="Analytical Solution" class="ui button" />
-      <input type="button" id="button" value="Graphical Solution" class="ui button" />
+      <input type="submit" value="Аналитическое решение" class="ui button" />
+      <input type="button" id="button" value="Грфическое решение" class="ui button" />
     </form>
     <br>
 
