translate into russian

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,8 +30,8 @@
         </div>
       </div>
       <br>
-      <input type="submit" value="Аналитическое решение" class="ui button" />
-      <input type="button" id="button" value="Грфическое решение" class="ui button" />
+      <input type="submit" value="Решить" class="ui button" />
+      <input type="button" id="button" value="График" class="ui button" />
     </form>
     <br>
 
